--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit Poddar</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <section>
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h2 class="h2">
+          <a class="name-color" href="https://github.com/Ankit0188"><span class="name-color">Ankit Poddar's</span></a> World!
+        </h2>
+        <h3>Web Structural Designer</h3>
+        <p>
+          I am a originator & engineer with a enthusiasm for web plan. I
+          appreciate creating straightforward, clean, and smooth websites that
+          give genuine esteem to the conclusion client. Thousands of clients
+          have secured remarkable comes about whereas working with me. Conveying
+          work inside time and budget which meets clients' prerequisites in our
+          proverb.
+        </p>
+        <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/ankit-poddar-8b55401b8/">Hire Me</a>
+      </div>
+      <div class="half-width"><img src="images/ankit.png" alt="" /></div>
+    </section>
+  </body>
 </html>
