--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit Poddar</title>
+    <link rel="shortcut icon" href="images/ankit.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,11 +14,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
-        <h1>Welcome To</h1>
+        <h1>Wel<span class="h1-color">come</span> To</h1>
         <h2 class="h2">
-          <a class="name-color" href="https://github.com/Ankit0188"><span class="name-color">Ankit Poddar's</span></a> World!
+          <a
+            target="_blank"
+            class="name-color"
+            href="https://github.com/Ankit0188"
+            ><span class="name-color">Ankit Poddar's</span></a
+          >
+          World!
         </h2>
         <h3>Web Structural Designer</h3>
         <p>
@@ -28,7 +35,12 @@
           work inside time and budget which meets clients' prerequisites in our
           proverb.
         </p>
-        <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/ankit-poddar-8b55401b8/">Hire Me</a>
+        <a
+          class="link-btn"
+          target="_blank"
+          href="https://www.linkedin.com/in/ankit-poddar-8b55401b8/"
+          >Hire Me</a
+        >
       </div>
       <div class="half-width"><img src="images/ankit.png" alt="" /></div>
     </section>
