--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="top-banner">
       <div class="half-width">
-        <h1>Wel<span class="h1-color">come</span> To</h1>
+        <h1 class="h1">Wel<span class="h1-color">come</span> To</h1>
         <h2 class="h2">
           <a
             target="_blank"
@@ -45,4 +45,20 @@
       <div class="half-width"><img src="images/ankit.png" alt="" /></div>
     </section>
   </body>
+  <section class="dream-big">
+    <div>
+      <img src="images/ankit.png" alt="">
+    </div>
+    <div>
+      <h1 class="h1">Dream is <span class="h1-color1">Big</span></h1>
+      <h3 class="h3"><span>To</span></h3>
+      <h2 class="dream-big1">Become a Web Developer</h2>
+      <p class="dream-bigp">I have as of now learned fundamental HTML & CSS. I can construct any test websites. I can indeed work as a backend designer to form websites. My objective is to construct those &learn progressed points.</p>
+      <a
+          class="link-btn2"
+          target="_blank"
+          href="resume/Ankit.pdf"
+          >Download Resume</a>
+    </div>
+  </section>
 </html>
