--- a/index.html
+++ b/index.html
@@ -61,4 +61,12 @@
           >Download Resume</a>
     </div>
   </section>
+  <section class="experience-education">
+    <div class="education">
+      <h1 class="ed-h1">Education</h1>
+    </div>
+    <div class="experience">
+      <h1>Experience</h1>
+    </div>
+  </section>
 </html>
