--- a/index.html
+++ b/index.html
@@ -42,26 +42,29 @@
           >Hire Me</a
         >
       </div>
-      <div class="half-width"><img src="images/ankit.png" alt="" /></div>
+      <div class="half-width"><img src="images/ankit1.jpg" alt="" /></div>
     </section>
   </body>
   <section class="dream-big">
     <div>
-      <img src="images/ankit.png" alt="">
+      <img src="images/ankit2.jpg" alt="" />
     </div>
     <div>
       <h1 class="h1">Dream is <span class="h1-color1">Big</span></h1>
       <h3 class="h3"><span>To</span></h3>
       <h2 class="dream-big1">Become a Web Developer</h2>
-      <p class="dream-bigp">I have as of now learned fundamental HTML & CSS. I can construct any test websites. I can indeed work as a backend designer to form websites. My objective is to construct those &learn progressed points.</p>
-      <a
-          class="link-btn2"
-          target="_blank"
-          href="resume/Ankit.pdf"
-          >Download Resume</a>
+      <p class="dream-bigp">
+        I have as of now learned fundamental HTML & CSS. I can construct any
+        test websites. I can indeed work as a backend designer to form websites.
+        My objective is to construct those &learn progressed points.
+      </p>
+      <a class="link-btn2" target="_blank" href="resume/Ankit.pdf"
+        >Download Resume</a
+      >
     </div>
   </section>
   <section class="experience-education">
+    <h3 class="section-title">A Summary of My Resume</h3>
     <div class="education">
       <h1 class="ed-h1">Education</h1>
     </div>
