--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
       >
     </div>
   </section>
-  <section class="experience-education">
+  <section class="resume">
     <h3 class="section-title">A Summary of My Resume</h3>
-    <div class="education">
-      <h1 class="ed-h1">Education</h1>
-    </div>
-    <div class="experience">
-      <h1>Experience</h1>
+    <div class="resume-content">
+      <div>
+        <h3 class="education">Education</h3>
+      </div>
     </div>
   </section>
 </html>
