--- a/index.html
+++ b/index.html
@@ -64,10 +64,74 @@
     </div>
   </section>
   <section class="resume">
-    <h3 class="section-title">A Summary of My Resume</h3>
+    <h2 class="section-title">A Summary of My Resume</h2>
     <div class="resume-content">
       <div>
-        <h3 class="education">Education</h3>
+        <h2 class="education">E D U C A T I O N</h2>
+        <hr />
+        <div class="education-item">
+          <h4 class="education-title">
+           <li>B.Sc in Computer Science & Engineering</li>
+          </h4>
+          <h5 class="sub-title">University of Asia Pacific</h5>
+          <h6 class="cg">C.G.P.A. - 3.11 out of 4.00</h6>
+          <p class="description">04/2017 - 06/2021</p>
+          <hr />
+        </div>
+        <div class="education-item">
+          <h4 class="education-title">
+            <li>Higher Secondary School Certificate(H.S.C.)</li>
+          </h4>
+          <h5 class="sub-title">Dhaka City College</h5>
+          <h6 class="cg">G.P.A. - 4.83 out of 5.00</h6>
+          <p class="description">07/2014 - 06/2016</p>
+          <hr />
+        </div>
+        <div class="education-item">
+          <h4 class="education-title"><li>Secondary School Certificate(S.S.C.)</li></h4>
+          <h5 class="sub-title">B.L. Govt. High School</h5>
+          <h6 class="cg">G.P.A. - 5.00 out of 5.00</h6>
+          <p class="description">01/2012 - 03/2014</p>
+        </div>
+      </div>
+      <div>
+        <h2 class="education">P R O J E C T S</h2>
+        <hr />
+        <div class="education-item">
+          <h4 class="education-title">
+            <li>Dream Car</li>
+          </h4>
+          <h5 class="sub-title">Developed By:</h5>
+          <h6 class="cg">Python & Django Framework with MYSQL Database</h6>
+          <p class="description">
+            Dream Car was a project which mainly focused on selling and buying
+            used car.
+          </p>
+          <hr />
+        </div>
+        <div class="education-item">
+          <h4 class="education-title">
+            <li>Course Management System.</li>
+          </h4>
+          <h5 class="sub-title">Developed By:</h5>
+          <h6 class="cg">Laravel Framework</h6>
+          <p class="description">
+            Course Management System is a project where different types of
+            courses can be managed by a user.
+          </p>
+          <hr />
+        </div>
+        <div class="education-item">
+          <h4 class="education-title">
+            <li>Online Medical Consultation.</li>
+          </h4>
+          <h5 class="sub-title">Developed By:</h5>
+          <h6 class="cg">Python & Django Framework</h6>
+          <p class="description">
+            Online Medical consultant system is an online platform that will
+            give an opportunity to consult a patient.
+          </p>
+        </div>
       </div>
     </div>
   </section>
