--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit Poddar</title>
-    <link rel="shortcut icon" href="images/ankit.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/ankit3.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -71,7 +71,7 @@
         <hr />
         <div class="education-item">
           <h4 class="education-title">
-           <li>B.Sc in Computer Science & Engineering</li>
+            <li>B.Sc in Computer Science & Engineering</li>
           </h4>
           <h5 class="sub-title">University of Asia Pacific</h5>
           <h6 class="cg">C.G.P.A. - 3.11 out of 4.00</h6>
@@ -88,7 +88,9 @@
           <hr />
         </div>
         <div class="education-item">
-          <h4 class="education-title"><li>Secondary School Certificate(S.S.C.)</li></h4>
+          <h4 class="education-title">
+            <li>Secondary School Certificate(S.S.C.)</li>
+          </h4>
           <h5 class="sub-title">B.L. Govt. High School</h5>
           <h6 class="cg">G.P.A. - 5.00 out of 5.00</h6>
           <p class="description">01/2012 - 03/2014</p>
@@ -133,6 +135,13 @@
           </p>
         </div>
       </div>
+    </div>
+    <div>
+      <h2 class="intern-title">E X P E R I E N C E</h2>
+      <hr class="hr"/>
+      <h3 class="intern-sub-title">Internship</h3>
+      <h4 class="intern-cg">Endeavors Ltd</h4>
+      <h5 class="intern-description">Moghbazar, Dhaka</h5>
     </div>
   </section>
 </html>
