--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <hr />
         <div class="education-item">
           <h4 class="education-title">
-            <li>B.Sc in Computer Science & Engineering</li>
+            <li>B.Sc in Computer Science & Engineering.</li>
           </h4>
-          <h5 class="sub-title">University of Asia Pacific</h5>
+          <h5 class="sub-title">University of Asia Pacific.</h5>
           <h6 class="cg">C.G.P.A. - 3.11 out of 4.00</h6>
           <p class="description">04/2017 - 06/2021</p>
           <hr />
@@ -82,7 +82,7 @@
           <h4 class="education-title">
             <li>Higher Secondary School Certificate(H.S.C.)</li>
           </h4>
-          <h5 class="sub-title">Dhaka City College</h5>
+          <h5 class="sub-title">Dhaka City College.</h5>
           <h6 class="cg">G.P.A. - 4.83 out of 5.00</h6>
           <p class="description">07/2014 - 06/2016</p>
           <hr />
@@ -91,7 +91,7 @@
           <h4 class="education-title">
             <li>Secondary School Certificate(S.S.C.)</li>
           </h4>
-          <h5 class="sub-title">B.L. Govt. High School</h5>
+          <h5 class="sub-title">B.L. Govt. High School.</h5>
           <h6 class="cg">G.P.A. - 5.00 out of 5.00</h6>
           <p class="description">01/2012 - 03/2014</p>
         </div>
@@ -101,9 +101,9 @@
         <hr />
         <div class="education-item">
           <h4 class="education-title">
-            <li>Dream Car</li>
+            <li>Dream Car.</li>
           </h4>
-          <h5 class="sub-title">Developed By:</h5>
+          <h5 class="sub-title">Developed By :</h5>
           <h6 class="cg">Python & Django Framework with MYSQL Database</h6>
           <p class="description">
             Dream Car was a project which mainly focused on selling and buying
@@ -115,7 +115,7 @@
           <h4 class="education-title">
             <li>Course Management System.</li>
           </h4>
-          <h5 class="sub-title">Developed By:</h5>
+          <h5 class="sub-title">Developed By :</h5>
           <h6 class="cg">Laravel Framework</h6>
           <p class="description">
             Course Management System is a project where different types of
@@ -127,7 +127,7 @@
           <h4 class="education-title">
             <li>Online Medical Consultation.</li>
           </h4>
-          <h5 class="sub-title">Developed By:</h5>
+          <h5 class="sub-title">Developed By :</h5>
           <h6 class="cg">Python & Django Framework</h6>
           <p class="description">
             Online Medical consultant system is an online platform that will
@@ -138,10 +138,23 @@
     </div>
     <div>
       <h2 class="intern-title">E X P E R I E N C E</h2>
-      <hr class="hr"/>
+      <hr class="hr" />
       <h3 class="intern-sub-title">Internship</h3>
-      <h4 class="intern-cg">Endeavors Ltd</h4>
-      <h5 class="intern-description">Moghbazar, Dhaka</h5>
+      <h4 class="intern-cg">Endeavors Ltd.</h4>
+      <h5 class="intern-description">Moghbazar, Dhaka.</h5>
     </div>
   </section>
+  <section class="end">
+  <div class="like">
+    <h1 class="like-title">What I Like</h1>
+    <div class="like1">
+    <div class="content-box">
+    </div>
+    <div class="content-box"></div>
+    <div class="content-box"></div>
+    <div class="content-box"></div>
+  </div>
+</div>
+<div>COntact</div>
+</section>
 </html>
