--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
       <img src="images/ankit2.jpg" alt="" />
     </div>
     <div>
-      <h1 class="h1">Dream is <span class="h1-color1">Big</span></h1>
+      <h1 class="h1">
+        Dr<span class="h1-color1">ea</span>m
+        <span class="h1-color1">is </span>Big
+      </h1>
       <h3 class="h3"><span>To</span></h3>
       <h2 class="dream-big1">Become a Web Developer</h2>
       <p class="dream-bigp">
@@ -145,16 +148,15 @@
     </div>
   </section>
   <section class="end">
-  <div class="like">
-    <h1 class="like-title">What I Like</h1>
-    <div class="like1">
-    <div class="content-box">
+    <div class="like">
+      <h1 class="like-title">What I Like</h1>
+      <div class="like1">
+        <div class="content-box"></div>
+        <div class="content-box"></div>
+        <div class="content-box"></div>
+        <div class="content-box"></div>
+      </div>
     </div>
-    <div class="content-box"></div>
-    <div class="content-box"></div>
-    <div class="content-box"></div>
-  </div>
-</div>
-<div>COntact</div>
-</section>
+    <div>COntact</div>
+  </section>
 </html>
