--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <nav class="section">
     <section class="top-banner">
       <div class="half-width">
         <h1 class="h1">Wel<span class="h1-color">come</span> To</h1>
@@ -44,109 +45,113 @@
       </div>
       <div class="half-width"><img src="images/ankit1.jpg" alt="" /></div>
     </section>
+  </nav>
   </body>
-  <section class="dream-big">
-    <div>
-      <img src="images/ankit2.jpg" alt="" />
-    </div>
-    <div>
-      <h1 class="h1">
-        Dr<span class="h1-color1">ea</span>m
-        <span class="h1-color1">is </span>Big
-      </h1>
-      <h3 class="h3"><span>To</span></h3>
-      <h2 class="dream-big1">Become a Web Developer</h2>
-      <p class="dream-bigp">
-        I have as of now learned fundamental HTML & CSS. I can construct any
-        test websites. I can indeed work as a backend designer to form websites.
-        My objective is to construct those &learn progressed points.
-      </p>
-      <a class="link-btn2" target="_blank" href="resume/Ankit.pdf"
-        >Download Resume</a
-      >
-    </div>
-  </section>
-  <section class="resume">
-    <h2 class="section-title">A Summary of My Resume</h2>
-    <div class="resume-content">
+  <section class="section">
+    <section class="dream-big">
       <div>
-        <h2 class="education">E D U C A T I O N</h2>
-        <hr />
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>B.Sc in Computer Science & Engineering.</li>
-          </h4>
-          <h5 class="sub-title">University of Asia Pacific.</h5>
-          <h6 class="cg">C.G.P.A. - 3.11 out of 4.00</h6>
-          <p class="description">04/2017 - 06/2021</p>
+        <img src="images/ankit2.jpg" alt="" />
+      </div>
+      <div>
+        <h1 class="h1">
+          Dr<span class="h1-color1">ea</span>m
+          <span class="h1-color1">is </span>Big
+        </h1>
+        <h3 class="h3"><span>To</span></h3>
+        <h2 class="dream-big1">Become a Web Developer</h2>
+        <p class="dream-bigp">
+          I have as of now learned fundamental HTML & CSS. I can construct any
+          test websites. I can indeed work as a backend designer to form
+          websites. My objective is to construct those &learn progressed points.
+        </p>
+        <a target="_blank" href="resume/Ankit.pdf"
+          ><button class="link-btn2">Download Resume</button></a
+        >
+      </div>
+    </section>
+    <section class="resume">
+      <h2 class="section-title">A Summary of My Resume</h2>
+      <div class="resume-content">
+        <div>
+          <h2 class="education">E D U C A T I O N</h2>
           <hr />
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>B.Sc in Computer Science & Engineering.</li>
+            </h4>
+            <h5 class="sub-title">University of Asia Pacific.</h5>
+            <h6 class="cg">C.G.P.A. - 3.11 out of 4.00</h6>
+            <p class="description">04/2017 - 06/2021</p>
+            <hr />
+          </div>
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>Higher Secondary School Certificate(H.S.C.)</li>
+            </h4>
+            <h5 class="sub-title">Dhaka City College.</h5>
+            <h6 class="cg">G.P.A. - 4.83 out of 5.00</h6>
+            <p class="description">07/2014 - 06/2016</p>
+            <hr />
+          </div>
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>Secondary School Certificate(S.S.C.)</li>
+            </h4>
+            <h5 class="sub-title">B.L. Govt. High School.</h5>
+            <h6 class="cg">G.P.A. - 5.00 out of 5.00</h6>
+            <p class="description">01/2012 - 03/2014</p>
+          </div>
         </div>
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>Higher Secondary School Certificate(H.S.C.)</li>
-          </h4>
-          <h5 class="sub-title">Dhaka City College.</h5>
-          <h6 class="cg">G.P.A. - 4.83 out of 5.00</h6>
-          <p class="description">07/2014 - 06/2016</p>
+        <div>
+          <h2 class="education">P R O J E C T S</h2>
           <hr />
-        </div>
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>Secondary School Certificate(S.S.C.)</li>
-          </h4>
-          <h5 class="sub-title">B.L. Govt. High School.</h5>
-          <h6 class="cg">G.P.A. - 5.00 out of 5.00</h6>
-          <p class="description">01/2012 - 03/2014</p>
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>Dream Car.</li>
+            </h4>
+            <h5 class="sub-title">Developed By :</h5>
+            <h6 class="cg">Python & Django Framework with MYSQL Database</h6>
+            <p class="description">
+              Dream Car was a project which mainly focused on selling and buying
+              used car.
+            </p>
+            <hr />
+          </div>
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>Course Management System.</li>
+            </h4>
+            <h5 class="sub-title">Developed By :</h5>
+            <h6 class="cg">Laravel Framework</h6>
+            <p class="description">
+              Course Management System is a project where different types of
+              courses can be managed by a user.
+            </p>
+            <hr />
+          </div>
+          <div class="education-item">
+            <h4 class="education-title">
+              <li>Online Medical Consultation.</li>
+            </h4>
+            <h5 class="sub-title">Developed By :</h5>
+            <h6 class="cg">Python & Django Framework</h6>
+            <p class="description">
+              Online Medical consultant system is an online platform that will
+              give an opportunity to consult a patient.
+            </p>
+          </div>
         </div>
       </div>
       <div>
-        <h2 class="education">P R O J E C T S</h2>
-        <hr />
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>Dream Car.</li>
-          </h4>
-          <h5 class="sub-title">Developed By :</h5>
-          <h6 class="cg">Python & Django Framework with MYSQL Database</h6>
-          <p class="description">
-            Dream Car was a project which mainly focused on selling and buying
-            used car.
-          </p>
-          <hr />
-        </div>
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>Course Management System.</li>
-          </h4>
-          <h5 class="sub-title">Developed By :</h5>
-          <h6 class="cg">Laravel Framework</h6>
-          <p class="description">
-            Course Management System is a project where different types of
-            courses can be managed by a user.
-          </p>
-          <hr />
-        </div>
-        <div class="education-item">
-          <h4 class="education-title">
-            <li>Online Medical Consultation.</li>
-          </h4>
-          <h5 class="sub-title">Developed By :</h5>
-          <h6 class="cg">Python & Django Framework</h6>
-          <p class="description">
-            Online Medical consultant system is an online platform that will
-            give an opportunity to consult a patient.
-          </p>
-        </div>
+        <h2 class="intern-title">E X P E R I E N C E</h2>
+        <hr class="hr" />
+        <h3 class="intern-sub-title">Internship</h3>
+        <h4 class="intern-cg">Endeavors Ltd.</h4>
+        <h5 class="intern-description">Moghbazar, Dhaka.</h5>
       </div>
-    </div>
-    <div>
-      <h2 class="intern-title">E X P E R I E N C E</h2>
-      <hr class="hr" />
-      <h3 class="intern-sub-title">Internship</h3>
-      <h4 class="intern-cg">Endeavors Ltd.</h4>
-      <h5 class="intern-description">Moghbazar, Dhaka.</h5>
-    </div>
+    </section>
   </section>
+  
   <section class="end">
     <div class="like">
       <h1 class="like-title">What I Like</h1>
@@ -157,6 +162,8 @@
         <div class="content-box"></div>
       </div>
     </div>
-    <div>COntact</div>
+    <div class="like-title1">Contact</div>
   </section>
+</section>
+<footer></footer>
 </html>
