--- a/index.html
+++ b/index.html
@@ -155,14 +155,34 @@
   <section class="end">
     <div class="like">
       <h1 class="like-title">What I Like</h1>
-      <div class="like1">
-        <div class="content-box"></div>
-        <div class="content-box"></div>
-        <div class="content-box"></div>
-        <div class="content-box"></div>
       </div>
-    </div>
-    <div class="like-title1">Contact</div>
+      <div class="like1">
+        <div class="content-box">
+          <div class="like-box">
+            <img src="images/icons/nodejs.png" alt="">
+            <h6 class="sub-title">Node js</h6>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="like-box">
+            <img src="images/icons/js.png" alt="">
+            <h6 class="sub-title">Vanilla JavaScript</h6>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="like-box">
+            <img src="images/icons/react.png" alt="">
+            <h6 class="sub-title">React</h6>
+          </div>
+        </div>
+        <div class="content-box">
+          <div class="like-box">
+            <img src="images/icons/python.png" alt="">
+            <h6 class="sub-title">Python</h6>
+          </div>
+        </div>
+      </div>
+    <div class="like-title1">Let's Connect :</div>
   </section>
 </section>
 <footer></footer>
