--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           test websites. I can indeed work as a backend designer to form
           websites. My objective is to construct those &learn progressed points.
         </p>
-        <a target="_blank" href="resume/Ankit.pdf"
-          ><button class="link-btn2">Download Resume</button></a
-        >
+         <a target="_blank" href=""
+          ><button class="link-btn4">01883065065</button></a
+        > 
       </div>
     </section>
     <section class="resume">
@@ -148,7 +148,11 @@
         <h3 class="intern-sub-title">Internship</h3>
         <h4 class="intern-cg">Endeavors Ltd.</h4>
         <h5 class="intern-description">Moghbazar, Dhaka.</h5>
+        <a target="_blank" href="resume/Ankit.pdf"
+          ><button class="link-btn2">Download Resume</button></a
+        >
       </div>
+
     </section>
   </section>
   
@@ -161,29 +165,60 @@
           <div class="like-box">
             <img src="images/icons/nodejs.png" alt="">
             <h6 class="sub-title">Node js</h6>
+            <p class="description1">It is an open-source, cross-platform JavaScript runtime environment and library for running web applications outside the client's browser. </p>
           </div>
         </div>
         <div class="content-box">
           <div class="like-box">
             <img src="images/icons/js.png" alt="">
             <h6 class="sub-title">Vanilla JavaScript</h6>
+            <p class="description1">It is essentially a unadulterated JavaScript code composed in its crude shape, without any plugins or other libraries.</p>
           </div>
         </div>
         <div class="content-box">
           <div class="like-box">
             <img src="images/icons/react.png" alt="">
             <h6 class="sub-title">React</h6>
+            <p class="description1">React is a JavaScript library for building user interfaces, known for its reusable components and efficient UI updates, widely used by software developers like you.</p>
           </div>
         </div>
         <div class="content-box">
           <div class="like-box">
             <img src="images/icons/python.png" alt="">
             <h6 class="sub-title">Python</h6>
+            <p class="description1">Python is a versatile and easy-to-read programming language, often chosen by software developers like you for its simplicity and extensive libraries, suitable for various applications.</p>
           </div>
         </div>
       </div>
-    <div class="like-title1">Let's Connect :</div>
+    <section class="connect">
+      <div>
+        <h3 class="like-title1">Let's Connect</h3>
+        <p class="section-description">
+          Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <a target="_blank" href="https://www.facebook.com/ankit.poddar.bipu?mibextid=ZbWKwL">
+          <img src="images/icons/facebook.png" alt="">
+        </a>
+        <a target="_blank" href="https://twitter.com/ankitpoddar007?s=09">
+          <img src="images/icons/twitter.png" alt="">
+        </a>
+        <a target="_blank" href="https://instagram.com/destroyed_sottobroto?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">
+          <img src="images/icons/insta.png" alt="">
+        </a>
+      </div>
+      <div>
+        <h3 class="link-title1">Let's Massage Me</h3>
+        <form action="">
+          <input class="name" type="text" name="" id="" placeholder="Your Name"><br>
+          <input class="name" type="email" name="" id="" placeholder="Your Email">
+          <textarea class="name" name="" id="" cols="30" rows="10" placeholder="Massage"></textarea><br>
+          <input class="link-btn3" type="submit" value="submit">
+        </form>
+      </div>
+    </section>
+    <footer>
+      <h6>ankit</h6>
+    </footer>
   </section>
 </section>
-<footer></footer>
 </html>
