--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
         </form>
       </div>
     </section>
-    <footer>
-      <h6>ankit</h6>
-    </footer>
+    
+      <footer class="copyright">&copy; Copyright 2023 AP.</footer>
+      
   </section>
 </section>
 </html>
