--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/ankit3.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://kit.fontawesome.com/d1ad3fb355.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
       rel="stylesheet"
@@ -65,7 +66,7 @@
           websites. My objective is to construct those &learn progressed points.
         </p>
          <a target="_blank" href=""
-          ><button class="link-btn4">01883065065</button></a
+          ><button class="link-btn4"><i class="fa-solid fa-phone"></i> 01883065065</button></a
         > 
       </div>
     </section>
@@ -149,7 +150,7 @@
         <h4 class="intern-cg">Endeavors Ltd.</h4>
         <h5 class="intern-description">Moghbazar, Dhaka.</h5>
         <a target="_blank" href="resume/Ankit.pdf"
-          ><button class="link-btn2">Download Resume</button></a
+          ><button class="link-btn2"><i class="fa-solid fa-download"></i> Download Resume</button></a
         >
       </div>
 
