--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           World!
         </h2>
-        <h3>Web Structural Designer</h3>
+        <h3 class="h3-web">Web Structural Designer</h3>
         <p>
           I am a originator & engineer with a enthusiasm for web plan. I
           appreciate creating straightforward, clean, and smooth websites that
@@ -149,11 +149,9 @@
         <h3 class="intern-sub-title">Internship</h3>
         <h4 class="intern-cg">Endeavors Ltd.</h4>
         <h5 class="intern-description">Moghbazar, Dhaka.</h5>
-        <a target="_blank" href="resume/Ankit.pdf"
-          ><button class="link-btn2"><i class="fa-solid fa-download"></i> Download Resume</button></a
-        >
+        <a target="_blank" href="resume/Ankit.pdf">
+        <button class="link-btn2"><i class="fa-solid fa-download"></i> Download Resume</button></a>
       </div>
-
     </section>
   </section>
   
